Issue #22290: PyObject_Call() now fails with an assertion error when called with an exception set. This new assertion helps to understand if the exception was already set before calling the function or raised by the function.